--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,9 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [ lp-v1, main, master ]
-  pull_request:
-    branches: [ lp-v1, main, master ]
+    branches: [ lp-v1 ]
   workflow_dispatch:
 
 permissions:
@@ -27,7 +25,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
+          cache: 'npm'
           
       - name: Install dependencies
         run: npm ci
