--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "wittwizz-landing-page",
+  "name": "wittwiz-landing-page",
   "version": "1.0.0",
-  "description": "Wittwizz Digital Landing Page v1 with MCP allowlist imports - HOTFIX DEPLOYMENT",
+      "description": "Wittwiz Digital Landing Page v1 with MCP allowlist imports - HOTFIX DEPLOYMENT",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
   "dependencies": {
     "framer-motion": "^12.23.12",
     "lucide-react": "0.477.0",
+    "react-router-dom": "^7.8.2",
     "tailwindcss": "3.4.10"
   },
   "devDependencies": {
